fix scrollbars showing up in fullscreen mode

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -2,6 +2,11 @@ html,body,h1{
 margin:0;
 }
 
+.row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
 #bar{
   background-color:#111;
   opacity: 0.7;
